# ocaml-cpuinfo

./: .gitignore  LICENSE  README.md  config.h.in  config.status  configure  configure.ac
src/: cpuinfo.ml  cpuinfo.mli  dune  num_cores.c  num_cores.h  ocaml_cstubs.c
test/: dune  test_cpuinfo.ml
